# psi4qdp

./: .pre-commit-config.yaml  README.md  pyproject.toml
psi4qdp/: main.py  psi4.py  xtb.py
tests/: .gitignore  test_cli.py  test_cli_charge.py  test_psi4.py
